--- a/Pertemuan-3/frame.html
+++ b/Pertemuan-3/frame.html
@@ -59,7 +59,7 @@
 
 <nav>
 <a href="#">Home</a>
-<a href="tabel.html">Tabel</a>
+<a href="table.html">Tabel</a>
 <a href="form.html">Form</a>
 </nav>
 
